# drake

./: .gitmodules  BUILD.bazel  CMakeLists.txt  drake_environment.sh
drake/: CMakeLists.txt
drake/examples/Acrobot/: 3Link.urdf  AcrobotController.m  AcrobotControllerSystem.m  AcrobotLCPSim.m  AcrobotNoBase.urdf  AcrobotSim.m  AcrobotTestSandbox.m  misim.m  misimAcrobot.m  threeLinkSim.m
drake/examples/Atlas/: Atlas.m
drake/examples/CompassGait/: CompassGaitController.m  CompassGaitExtendedKalmanFilter.m  CompassGaitLQR.m  CompassGaitObserver.m  CompassGaitPDController.m  CompassGaitParticle.m  CompassGaitParticleFilter.m  CompassGaitPlant.m  CompassGaitPlantWithController.m  CompassGaitStancePlant.m  CompassGaitUtils.m  (+42 more)
drake/examples/ResidualDetector/src/: CMakeLists.txt  LCMHandler.h  LCMHandler.hpp  RobotStateDriver.cpp  residual-detector.cpp  residual-detector.hpp  residual_detector.cc  residual_detector.h  residual_detector_lcm_wrapper.cc  residual_detector_lcm_wrapper.h  residual_detector_test.cc  residual_detector_utils.cc  residual_detector_utils.h
drake/lcmtypes/: lcmt_iiwa_status.lcm  lcmt_qp_controller_input.lcm  lcmt_qp_controller_state.lcm
drake/util/: CMakeLists.txt  edgeDetector.cpp  edgeDetector.h
examples/Atlas/: runAtlasBalancing_contacts.m  runAtlasStandup.m  runAtlasStandupSplit.m
lcmtypes/: CMakeLists.txt
systems/controllers/: QPControllerContacts.m
systems/robotInterfaces/: KinematicPlan.m  QPLocomotionPlan.m
systems/visualizers/: Visualizer.m
util/: CMakeLists.txt  edgeDetector.cpp  edgeDetector.h  xyzrpy2HomogTransform
(+107 files in other folders)
